# epanel

./: .cppcheck-suppressions.txt  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  RELEASE_NOTES.md  findings.md
.github/: aqt-settings.ini
.github/workflows/: build-release.yml  build.yml  swift.yml
ePanel/: ContentView.swift  DataStore.swift  SafariSyncManager.swift  ePanel.entitlements  ePanelApp.swift
ePanel/Assets.xcassets/AppIcon.appiconset/: Contents.json
ePanelTests/: ePanelTests.swift
ePanelUITests/: ePanelUITests.swift  ePanelUITestsLaunchTests.swift
epanel/: AppDelegate.swift  ContentView.swift  CustomTableView.swift  DataStore.swift  SafariSyncManager.swift  Urls.swift  ViewController.swift  ePanelApp.swift
epanel.xcodeproj/: project.pbxproj
epanel.xcodeproj/xcshareddata/xcschemes/: ePanel.xcscheme  epanel.xcscheme
epanel.xcodeproj/xcuserdata/al.xcuserdatad/xcschemes/: xcschememanagement.plist
epanel/Assets.xcassets/AppIcon.appiconset/: Contents.json
epanel/Base.lproj/: Main.storyboard
resources/: Info.plist.in  windows_icon.rc.in
resources/icons/: icon.icns
scripts/: create-dmg.sh  generate-dmg-dsstore.py
src/: main.cpp
src/datastore/: DataStore.cpp  DataStore.h
src/models/: EPanelData.cpp  EPanelData.h  Entry.cpp  Entry.h  Folder.cpp  Folder.h
src/platform/: SafariSyncManager.h  SafariSyncManager.mm
src/ui/: LinksView.cpp  LinksView.h  MainWindow.cpp  MainWindow.h  NotesView.cpp  NotesView.h  SettingsView.cpp  SettingsView.h  TreeModel.cpp  TreeModel.h
src/ui/dialogs/: AddEntryDialog.cpp  AddEntryDialog.h  MoveItemDialog.cpp  MoveItemDialog.h  NewFolderDialog.cpp  NewFolderDialog.h
